--- a/sql-mysql.properties
+++ b/sql-mysql.properties
@@ -10,7 +10,7 @@
 
 sql.getName="SELECT c_fname,c_lname FROM customer WHERE c_id = ?"
 
-sql.getBook="SELECT * FROM item,author WHERE item.i_a_id = author.a_id AND i_id = ?"
+sql.getBook="SELECT * FROM item WHERE item.i_id = ?"
 
 sql.getCustomer="SELECT * FROM customer, address, country WHERE customer.c_addr_id = address.addr_id AND address.addr_co_id = country.co_id AND customer.c_uname = ?"
 
