--- a/sql-mysql.properties
+++ b/sql-mysql.properties
@@ -14,18 +14,20 @@ sql.getBook="SELECT * FROM item WHERE i_id = ?"
 
 sql.getCustomer="SELECT * FROM customer, address, country WHERE customer.c_addr_id = address.addr_id AND address.addr_co_id = country.co_id AND customer.c_uname = ?"
 
-sql.doSubjectSearch="SELECT * FROM item WHERE item.i_subject = ? ORDER BY item.i_title limit 50"
+sql.doSubjectSearch="SELECT * FROM item WHERE item.i_subject = ? ORDER BY item.i_title limit 60"
 
-sql.doTitleSearch="SELECT * FROM item WHERE substring(soundex(item.i_title),0,4)=substring(soundex(?),0,4) ORDER BY item.i_title limit 50"
+sql.doTitleSearch="SELECT * FROM item WHERE substring(soundex(item.i_title),0,4)=substring(soundex(?),0,4) ORDER BY item.i_title limit 60"
+
+sql.doAuthorSearch="SELECT * FROM author, item WHERE substring(soundex(author.stock),0,4)=substring(soundex(?),0,4) AND item.i_a_id = author.a_id ORDER BY item.i_title limit 50"
 
 sql.getNewProducts="SELECT i_id, i_title, prime, stock " +\
 		 "FROM item " +\
-		 "AND item.i_subject = ? " +\
+		 "WHERE item.i_subject = ? " +\
 		 "ORDER BY item.i_pub_date DESC,item.i_title " +\
-		 "limit 50"
+		 "limit 60"
 
-sql.getBestSellers="SELECT i_id, i_title, i_prime, ii_stock " +\
-		 "FROM item,  order_line " +\
+sql.getBestSellers="SELECT i_id, i_title, prime, stock " +\
+		 "FROM item, order_line " +\
 		 "WHERE item.i_id = order_line.ol_i_id " +\
 		 "AND order_line.ol_o_id > (SELECT MAX(o_id)-3333 FROM orders) " +\
 		 "AND item.i_subject = ? " +\
